--- a/Calculator.css
+++ b/Calculator.css
@@ -188,7 +188,7 @@ button:active
 button.modeButtons:hover
 {
 	background: #ff6666;
-	border: 2px solid #ff6666;
+	border: none;
 	box-shadow: 0px 0px 2px 1px black;
 	color: white;
 	opacity: 1;
