--- a/CalculatorLight.css
+++ b/CalculatorLight.css
@@ -188,7 +188,7 @@ button:active
 button.modeButtons:hover
 {
 	background: #1aa3ff;
-	border: 2px solid #1aa3ff;
+	border: none;
 	box-shadow: 0px 0px 2px 1px black;
 	color: white;
 	opacity: 1;
